nivasa-macros/tests/trybuild/validation_partial_dto_invalid.rs
use nivasa_macros::PartialDto;

#[derive(PartialDto)]
struct InvalidPatchUserDto {
    #[is_email]
    email: String,
}

fn main() {}
